Add 2016 blog posts

--- a/content/articles/16.sitecore-investigation-error-installing-item-bucket-package.md
+++ b/content/articles/16.sitecore-investigation-error-installing-item-bucket-package.md
@@ -1,10 +1,16 @@
 ---
-layout: post
+cover: /articles/2016/16.1.bucket_icon.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2016-04-28
 title: "Sitecore investigation: Errors installing a content package with item buckets"
-tags: Sitecore bucket index error
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/04/28/bucket_icon.png" alt="Bucket icon">
+![Bucket icon](/articles/2016/16.1.bucket_icon.png)
 
 A colleague showed me this error today in the Sitecore log:
 
@@ -16,9 +22,7 @@ This issue occurred when a Sitecore zip package with content items was installed
 
 Here's an example of how that looks like (when you've checked the _Buckets_ option in the _View_ toolbar):
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/04/28/item_bucket_without_content.png" alt="Item bucket with an empty bucket folder">
-
-<!--more-->
+![Item bucket with an empty bucket folder](/articles/2016/16.2.item_bucket_without_content.png)
 
 ### Cause
 
@@ -28,7 +32,21 @@ Apparently when _bucketable_ items are deleted their automatically generated par
 
 When you use item buckets, make sure you uncomment the `RemoveEmptyBucketFolders` agent section in the Sitecore.Buckets.config as shown below (or even better: make a patch file to enable it):
 
-{% gist 0f1e7c266f5e45dbce269bef841d50ef %}
+**Sitecore.Buckets.config.xml**
+
+```xml
+<!-- EMPTY BUCKET CLEANING JOB
+         This job runs at the set interval time and removes item bucket folders that no longer contain any items.
+         This could be cause by deleting an item from a bucket, which has no other items in it.
+-->
+  <scheduling>
+  <frequency>00:00:05</frequency>
+  <!-- Adjust the interval and frequency as needed to speed things up on a local dev environment. -->
+  <agent type="Sitecore.Buckets.Tasks.RemoveEmptyBucketFolders" method="Run" interval="00:00:10">
+    <DatabaseName>master</DatabaseName>
+  </agent>
+</scheduling>
+```
 
 Finally, always double check if there are empty `Bucket` folder items before making a content package that will contain bucketable items. 
 
