--- a/content/articles/17.workflow-management-spe-module.md
+++ b/content/articles/17.workflow-management-spe-module.md
@@ -1,12 +1,16 @@
 ---
-layout: post
+cover: /articles/2016/17.1.workflow_management.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2016-05-16
 title: "Workflow Management SPE Module"
-tags: sitecore PowerShell Extensions Workflow Management
+description:
+layout: article
 ---
 
-
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/05/16/workflow_management.png" alt="Workflow Management SPE Module">
-
+![Workflow Management SPE Module](/articles/2016/17.1.workflow_management.png)
 
 ## Sitecore PowerShell Extensions first encounter
 
@@ -17,8 +21,6 @@ Right after I got back from SUGCON the project I was working on had a nice chall
 We needed a way to update the content items with the workflow that was set on the _Default workflow_ field on the updated templates.
 
 For me this was an excellent opportunity to try SPE. I wrote a Sitecore PowerShell script to update _Workflow_ and _Workflow state_ fields, posted it [in a gist](https://gist.github.com/marcduiker/950e0358bb4752ed5b047931a8c958c1) and [tweeted](https://twitter.com/marcduiker/status/728375187431936000) about it. I got in contact with [Michael West](https://twitter.com/michaelwest101) and Adam Najmanowicz (the developers of SPE) who made some excellent suggestions to improve the user friendliness of the script.
-
-<!--more-->
 
 ## Workflow Management Module
 Adam asked if I could turn the script into a custom SPE module that could be installed alongside SPE. I really liked this idea and this made me delve deeper in SPE which is btw [extremely well documented](https://sitecorepowershell.gitbooks.io/sitecore-powershell-extensions/content/).
@@ -31,23 +33,25 @@ You'll need SPE v4 and Sitecore 8.x to make use of the module. The zip package c
 
 Install the zip package using the Installation Wizard:
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/05/16/workflow_management_install1.png" alt="Workflow Management SPE Module">
+![Workflow Management SPE Module](/articles/2016/17.2.workflow_management_install1.png)
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/05/16/workflow_management_install2.png" alt="Workflow Management SPE Module">
+![Workflow Management SPE Module](/articles/2016/17.3.workflow_management_install2.png)
 
 ### Workflow Management toolbox
 
 Once the package is installed you'll see that a _Workflow Management_ element is added to the PowerShell toolbox:
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/05/16/workflow_management_toolbox.png" alt="Workflow Management SPE Module">
+![Workflow Management SPE Module](/articles/2016/17.4.workflow_management_toolbox.png)
+
 
 When you click the _Update workflow and state for content items_ action you'll be presented with the following dialog: 
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/05/16/workflow_management_dialog1.png" alt="Workflow Management SPE Module">
+![Workflow Management SPE Module](/articles/2016/17.5.workflow_management_dialog1.png)
+
 
 Here you need to select the __workflow state__ which is expected to be set on the content items in a later stage. 
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/05/16/workflow_management_dialog2.png" alt="Workflow Management SPE Module">
+![Workflow Management SPE Module](/articles/2016/17.6.workflow_management_dialog2.png)
 
 Once you click _Proceed_ the script will do the following:
 
@@ -55,7 +59,7 @@ Once you click _Proceed_ the script will do the following:
 - Find the templates which have the workflow set on the _Default workflow_ field in their ___Standard Values_.
 - Find the content items based on these templates and only list those items which _Workflow_ field are empty.
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/05/16/workflow_management_report1.png" alt="Workflow Management SPE Module">
+![Workflow Management SPE Module](/articles/2016/17.7.workflow_management_report1.png)
 
 To update the content items with the workflow and workflow state you can choose between two actions in the menu:
 
@@ -65,7 +69,7 @@ To update the content items with the workflow and workflow state you can choose 
 After running one of these actions you will see a notification about the number of items that have been processed.
 The list will be updated and now includes the _workflow ID_ and _workflow state ID_ values for the items. 
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/05/16/workflow_management_report2.png" alt="Workflow Management SPE Module">
+![Workflow Management SPE Module](/articles/2016/17.8.workflow_management_report2.png)
 
 ## Final Thoughts
 
