--- a/content/articles/18.improving-unit-test-readability-named-args.md
+++ b/content/articles/18.improving-unit-test-readability-named-args.md
@@ -1,7 +1,13 @@
 ---
-layout: post
-title: "Improving unit test readability: helper methods &amp; named arguments"
-tags: unit test readability named arguments C# .Net
+cover:
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2016-06-01
+title: "Improving unit test readability: helper methods & named arguments"
+description:
+layout: article
 ---
 
 'Uncle Bob' wrote the following in <a rel="nofollow" href="https://www.amazon.co.uk/gp/product/0132350882/">Clean Code: A Handbook of Agile Software Craftsmanship</a>:
@@ -9,8 +15,6 @@ tags: unit test readability named arguments C# .Net
 _"The ratio of time spent reading (code) versus writing is well over 10 to 1 ... (therefore) making it easy to read makes it easier to write."_
 
 So think about that when you write your next bit of code. You need to make sure your code is easily readable and understandable for _others_, you hardly ever write code just for yourself.
-
-<!--more-->
 
 ## Readable unit tests
 
@@ -20,7 +24,27 @@ Unit test code is not different than 'production' code. Readability is key here 
 
 Consider the following unit test for testing the `GetHighestRatedMovies` method in an imaginary `MovieService`:
 
-{% gist 9db3de2f8fb70121e77cd6c6423164b7 %}
+**UnitTestWithBulkyArrangeSection.cs**
+
+```csharp
+[Fact]
+public void GetHighestRatedMovies_RepositoryContainsMoviesWithRatings_ReturnsMoviesOrderedByDescendingRating()
+{
+    // Arrange
+    var fixture = new Fixture();
+    var movieCollection = fixture.CreateMany<Movie>(20).ToList();
+    var fakeMovieRepository = A.Fake<IMovieRepository>();
+    A.CallTo(() => fakeMovieRepository.GetAll()).Returns(movieCollection);
+    IMovieService movieService = new MovieService(fakeMovieRepository, null, null);
+    MovieServiceRequest request = new MovieServiceRequest { NumberOfMoviesToReturn = 5 };
+
+    // Act
+    IList<Movie> movies = movieService.GetHighestRatedMovies(request);
+
+    // Assert
+    movies.Should().BeInDescendingOrder(movie => movie.Rating);
+}
+```
 
 Although this unit test uses some great frameworks such as [xUnit](https://xunit.github.io/), [AutoFixture](https://github.com/AutoFixture/AutoFixture), [FakeItEasy](https://github.com/FakeItEasy/FakeItEasy) and [FluentAssertions](http://www.fluentassertions.com/) (big fan of these!) there are still some things I don't like, particularly in the _Arrange_ section:
 
@@ -36,12 +60,47 @@ Although 6 lines is not that much I do believe fewer lines in the _Arrange_ and 
 
 Here's how I refactored the unit test:
 
-{% gist d92aa66366c27459bd81cdf162aa0b7a %}
+**UnitTestWithLeanArrangeSection.cs**
+
+```csharp
+[Fact]
+public void GetHighestRatedMovies_RepositoryContainsMoviesWithRatings_ReturnsMoviesOrderedByDescendingRating()
+{
+    // Arrange
+    IMovieRepository fakeMovieRepository = GetFakeMovieRepository(nrOfMoviesInRepository: 20);
+    IMovieService movieService = new MovieService(fakeMovieRepository, context: null, logger: null);
+    MovieServiceRequest request = GetMovieServiceRequest(nrOfMoviesToReturn: 5);
+
+    // Act
+    IList<Movie> movies = movieService.GetHighestRatedMovies(request);
+
+    // Assert
+    movies.Should().BeInDescendingOrder(movie => movie.Rating);
+}
+
+private static IMovieRepository GetFakeMovieRepository(int nrOfMoviesInRepository)
+{
+    var fixture = new Fixture();
+    var movies = fixture.CreateMany<Movie>(nrOfMoviesInRepository).ToList();
+    var fakeRepository = A.Fake<IMovieRepository>();
+    A.CallTo(() => fakeRepository.GetAll()).Returns(movies);
+
+    return fakeRepository;
+}
+
+private static MovieServiceRequest GetMovieServiceRequest(int nrOfMoviesToReturn)
+{
+    return new MovieServiceRequest
+        {
+            NumberOfMoviesToReturn = nrOfMoviesToReturn
+        };
+}
+```
 
 There are two major differences:
 
 - Creation of fake objects and the request object is now done in private methods. This allows re-usage of these methods in future unit tests. When the number of these helper methods grows you should consider moving them to a seperate class.
-- [Named arguments](https://msdn.microsoft.com/en-us/library/dd264739.aspx) (available since C# 4.0) are used when calling the helper methods and for constructing the `MovieService`. It is now evident what the `null` values actually represent. An alternative would be to declare seperate variables for all these arguments. Although that would be very clear and descriptive I believe that would hurt readability because the _Arrange_ section would get quite bulky again.
+- [Named arguments](https://msdn.microsoft.com/library/dd264739.aspx) (available since C# 4.0) are used when calling the helper methods and for constructing the `MovieService`. It is now evident what the `null` values actually represent. An alternative would be to declare seperate variables for all these arguments. Although that would be very clear and descriptive I believe that would hurt readability because the _Arrange_ section would get quite bulky again.
 
 ### Tips for keeping your unit tests lean and understandable
 
