--- a/content/articles/19.blog-upgrade-excerpts-and-improving-performance.md
+++ b/content/articles/19.blog-upgrade-excerpts-and-improving-performance.md
@@ -1,18 +1,22 @@
 ---
-layout: post
+cover:
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2016-12-03
 title: "Blog upgrade: Post excerpts, microformats and improving performance"
-tags: blog microformat excerpt jekyll cdn performance seo
+description:
+layout: article
 ---
 
 ## Time for an upgrade
 
-I finally made some time available to work on this blog. There were a couple of things I wanted to improve since [I moved to GitHub Pages/Jekyll]({{ site.url }}/2015/10/06/moving-my-blog-i-love-github-and-markdown.html).
+I finally made some time available to work on this blog. There were a couple of things I wanted to improve since [I moved to GitHub Pages/Jekyll](/articles/moving-my-blog-i-love-github-and-markdown).
 
 1. Better looking index page. Before todays change it was a __very__ simple (and boring) bulleted list of links containing the date and title of individual blogposts.
 2. Improved content structure. Having a well defined content structure improves SEO. 
 3. Higher performance. Faster page loads makes both users and Google happy. 
-
-<!--more-->
 
 ## Index page with blog excerpts
 
@@ -23,7 +27,7 @@ Luckily Jekyll supports the usage of [post excerpts](https://jekyllrb.com/docs/p
 
 And in the content of the post where the excerpt ends you place the seperator:
 
-```
+```markdown
 ## Title
 
 This is included in the excerpt.
@@ -36,7 +40,7 @@ This is not included int the excerpt.
 
 Jekyll will use the content before the seperator as the excerpt. This can be used in the index page when iterating the posts as:
 
-```
+```markdown
 {% raw %}
 {% for post in paginator.posts %}
   ...
