--- a/content/articles/20.hands-on-with-sitecore-helix-using-powershell-add-module.md
+++ b/content/articles/20.hands-on-with-sitecore-helix-using-powershell-add-module.md
@@ -1,10 +1,16 @@
 ---
-layout: post
+cover: /articles/2016/20.1.powershell_vs_sitecore_helix.png
+author:
+  name: Marc Duiker
+  avatarUrl: https://marcduiker.dev/marcduiker_dapr.png
+  link: https://twitter.com/marcduiker
+date: 2016-12-28
 title: "Hands-on with Sitecore Helix: Using PowerShell to add a new module"
-tags: powershell sitecore helix habitat dte envdte visual studio
+description:
+layout: article
 ---
 
-<img class="u-max-full-width" itemprop="image" src="{{ site.url }}/assets/2016/12/28/powershell_vs_sitecore_helix.png" alt="PowerShell plus Visual Studio equals Sitecore Helix">
+![PowerShell plus Visual Studio equals Sitecore Helix](/articles/2016/20.1.powershell_vs_sitecore_helix.png)
 
 ## Embracing Sitecore Helix
 
@@ -15,9 +21,7 @@ I was very happy to see that Sitecore finally got their act together and publish
 
 For the last half year my team is using the modular Helix style architecture with success and it's time to share some experiences.
 
-<!--more-->
-
-__Go straight to the [TL;DR](#tldr)__
+__Go straight to the [TLDR](#tldr-my-add-helixmodule-solution)__
 
 ## Adding a new module with ease
 
@@ -73,15 +77,15 @@ Since that profile belongs to the console it's probably best to not touch that o
 When you type `$profile` in the Package Manager Console you'll get the location of a user profile that can be used to extend the default one. 
 In my case I got the following:
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/12/28/nuget_profile_path.png" alt="NuGet Profile Path"> 
+![NuGet Profile Path](/articles/2016/20.2.nuget_profile_path.png)
 
 If you go to that location there might not be a profile file at all. You can then create an empty file and name it `NuGet_profile.ps1`. 
 
 When you make changes to this user profile while Visual Studio is open Visual Studio will not detect any changes. You can type `& $profile` in the Package Manager Console to reload the profile.  
 
-## <a name="tldr"></a> TL;DR: My Add-HelixModule Solution
+## TLDR: My Add-HelixModule Solution
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/12/28/add-helixmodule.png" alt="Add-HelixModule">
+![Add-HelixModule](/articles/2016/20.3.add_helixmodule.png)
 
 1. `module-template`, a folder containing code and config template files. This template is based on a Sitecore Habitat Feature which is stripped down significantly.
 2. `add-helixmodule.ps1`, a PowerShell script which creates a new Feature or Foundation module __AND__ adds this to the current solution in Visual Studio.
@@ -94,7 +98,18 @@ You can see it working in my fork of Sitecore Habitat:
 - Verify that you have a `NuGet_profile.ps1` (use `$profile` to check the location).
 - Add the following to this profile and update the path to point to the `add-helixmodule.ps1` file on your disk:
 
-{% gist d519bb402dc199d350c05de8bf696231 %}
+**NuGet_profile.ps1**
+
+```powershell
+<# 
+    Loads the add-helixmodule.ps1 script to enable the creation of Feature and Foundation project in Sitecore Helix solutions.
+    
+    You need to change this path to the location where the script is located on your local machine. 
+    
+    Once the script is loaded the Add-Feature and Add-Foundation methods are available in the Package Manager Console in Visual Studio.
+#>
+. "C:\dev\git\HabitatFork\scripts\add-helixmodule.ps1"
+```
 
 - Open the Sitecore Habitat solution in Visual Studio.
 - Open the `add-helix-module-configuration.json` file.
@@ -103,16 +118,46 @@ You can see it working in my fork of Sitecore Habitat:
    - `featureNamespacePrefix`. This is the namespace prefix for new Feature modules (e.g. CompanyName.ClientName).
    - `foundationNamespacePrefix`. This is the namespace prefix for new Foundation modules (e.g. CompanyName).
    - `sourceFolderName`. This is the relative path to the location where the Feature/Foundation and Project folders are. For Sitecore Habitat this is `//src`.
-  
-{% gist 0b7c846430e8c9e89297dbf61ad829f3 %}
+
+**add-helix-module-configuration.json**
+
+```json
+{
+	"__comment": "This configuration file is used by the add-helix-module.ps1 script which creates modules for Sitecore Helix solutions.",
+	"config": {
+		"__comment__moduleTemplatePath": "Update the moduleTemplatePath property to point to your module-template location.",
+		"moduleTemplatePath": "C:\\dev\\git\\HabitatFork\\module-template",
+		"__comment__featureNamespacePrefix": "Replace the value for featureNamespacePrefix with a suitable namespace prefix. The Feature.<ModuleName> will be appended by the script.",
+		"featureNamespacePrefix": "CompanyNamespace.ClientNamespace",
+		"__comment__foundationNamespacePrefix": "Replace the value for featureNamespacePrefix with a suitable namespace prefix. The Foundation.<ModuleName> will be appended by the script.",
+		"foundationNamespacePrefix": "CompanyNamespace",
+		"__comment__sourceFolderName": "The sourcefolder should contain the relative path (from the sln file folder) where the Feature, Foundation and Project folders are located. The Sitecore Habitat default is '\\src'.",
+		"sourceFolderName": "\\src",
+		"__comment__fileExtensionsToUpdateContentRegex": "The regex in the fileExtensionsToUpdateContentRegex property is used to find the files which contain tokens which will be replaced with new values by the script.",
+		"fileExtensionsToUpdateContentRegex": "(.config|.csproj|.cs|.cshtml|.feature|.js|.nuspec|.role|.sitecore|.targets)$",
+		"__comment__fileExtensionsToUpdateProjectGuidsRegex" : "The regex in the fileExtensionsToUpdateProjectGuidsRegex property is used to find the files which need to have VS project GUIDs inserted.",
+		"fileExtensionsToUpdateProjectGuidsRegex": "(.csproj|AssemblyInfo.cs)$",
+		"__comment__": "The templateNamespacePrefix property contains the token which will be replaced with the value from either featureNamespacePrefix or foundationNamespacePrefix.",
+		"templateNamespacePrefix": "_NamespacePrefix_",
+		"__comment__templateModuleType": "The templateModuleType property contains the token variable which will be replaced with Feature or Foundation.",
+		"templateModuleType": "_ModuleType_",
+		"__comment__templateModuleName": "The templateModuleName property contains the token which will be replace with the actual ModuleName.",
+		"templateModuleName": "_Name_",
+		"__comment__templateProjectGuid": "The templateProjectGuid property contains the token which will be replaced by a new GUID and used as VS module project identifier.",
+		"templateProjectGuid": "_ProjectGuid_",
+		"__comment__templateTestProjectGuid": "The templateTestProjectGuid property contains the token which will be replaced by a new GUID and used as VS test project identifier.",
+		"templateTestProjectGuid": "_TestProjectGuid_"
+	}
+}
+```
 
 - Type `Add-Feature` or `Add-Foundation` in the Package Manager Console followed by the name of the module and hit enter. 
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/12/28/add_feature_completed.png" alt="Add-Feature Completed">
+![Add-Feature Completed](/articles/2016/20.4.add_feature_completed.png)
 
-<img class="u-max-full-width" src="{{ site.url }}/assets/2016/12/28/solution_explorer.png" alt="Solution Explorer showing the added feature">
+![Solution Explorer showing the added feature](/articles/2016/20.5.solution_explorer.png)
 
-In my [next post]({{ site.url }}/2016/12/29/hands-on-with-sitecore-helix-anatomy-add-helix-powershell-script.html) I'll dig deeper 
+In my [next post](/articles/hands-on-with-sitecore-helix-anatomy-add-helix-powershell-script) I'll dig deeper 
 into the inner workings of the `add-helixmodule.ps1` PowerShell script.
 
 ## So are we done now?
