--- a/content/1.index.md
+++ b/content/1.index.md
@@ -11,8 +11,14 @@ This website is heavily under construction 👷‍♀️🏗️.
 
 I'm changing it from a 100+ microservice architecture to a single monolith 😜.
 
-(I'm still migrating all my old blog posts. 
-Please come back later... or don't :shrug:.)
+Please come back later... or don't :shrug:.
 
 ![Marc Duiker pixelart avatar](/marcduiker_hardhat.gif)
 
+### //TODO
+
+- [ ] Migrate blog posts
+- [ ] Add page on DevEx
+- [ ] Add page on pixel art
+- [ ] Add page on creative coding
+- [ ] Update this index page
